--- a/css/main.css
+++ b/css/main.css
@@ -59,12 +59,10 @@
     }
 
     .hero-logo {
-        align-items: center;
-        text-align: center;
+        justify-content: center;
+        display: flex;
         width: 300px;
         height: 300px;
-        background-color: black;
-        color: white;
         border-radius: 5px;
     }
 
@@ -82,6 +80,11 @@
 
     #subheader {
         max-width: 500px;
+    }
+
+    .contact-us-header 
+    {
+        max-width: 300px;
     }
 
     #video {
@@ -154,18 +157,67 @@
     }
 /*Footer End*/
 
-    .country-input {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        background-color: rgb(0, 0, 0);
-        color: rgb(255, 255, 255);
-        border-radius: 5px;
-        text-align: center;
-        width: 200px; 
-        height: 50px; 
-        background-color: black; 
-    }
+/*Contact Us Start*/
+form 
+{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    justify-content: center;
+    margin-bottom: 100px;
+}
+  
+label 
+{
+    margin-top: 10px;
+    font-weight: bold;
+}
+
+input[type="text"],input[type="email"],
+textarea 
+{
+    width: 80%;
+    max-width: 300px;
+    padding: 10px;
+    margin-top: 5px;
+    margin-bottom: 20px;
+    border: 2px solid #ffffff;
+    border-radius: 5px;
+    box-sizing: border-box;
+    text-align: center;
+}
+  
+button[type="submit"] 
+{
+    
+    color: rgb(0, 0, 0);
+    padding: 12px 20px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    font-size: 16px;
+}
+
+button[type="submit"]:hover 
+{
+    background-color: #ff0000;
+}
+
+
+.country-input 
+{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: rgb(0, 0, 0);
+    color: rgb(255, 255, 255);
+    border-radius: 5px;
+    text-align: center;
+    width: 200px; 
+    height: 50px; 
+    background-color: black; 
+}
     
     .country {
         padding: 20px;
